--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.3",
     "@react-native-vector-icons/material-design-icons": "^12.2.0",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.4",
     "@react-navigation/drawer": "^7.5.5",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
+    "dayjs": "^1.11.13",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.80.2",
