--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/datetimepicker": "^8.4.3",
     "@react-native-vector-icons/material-design-icons": "^12.2.0",
     "@react-native/new-app-screen": "0.80.2",
