--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
